# pysri

./: .env.example  main.py  manage.py  pyproject.toml
clientes/: models.py  serializers.py  views.py
clientes/migrations/: 0001_initial.py  0002_alter_cliente_direccion_alter_cliente_telefono.py  0002_remove_clientes_id_clientes_uuid.py  0003_alter_clientes_uuid.py
empresas/: admin.py  models.py  serializers.py  views.py
empresas/migrations/: 0001_initial.py  0002_remove_empresa_certificate_and_more.py  0003_alter_certificado_empresa_id.py  0004_alter_certificado_unique_together_and_more.py  0005_alter_empresa_unique_together.py
facturas/: models.py  serializers.py  views.py
facturas/migrations/: 0001_initial.py
productos/: models.py  serializers.py  views.py
productos/migrations/: 0001_initial.py  0002_alter_producto_descripcion_adicional.py
pysri/: asgi.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
