[project]
name = "pysri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=48.0.0",
    "django==5.2",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "markdown>=3.10.2",
    "python-dotenv>=1.2.2",
]
